- Decreased container margin from the top - Adjusted logo margin - Increased margin for login detail box - Ensured login box and animated image are side by side on large screens - Removed top/bottom scrollbar for better responsiveness

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -1,3 +1,4 @@
+
 .container {
     width: 100%;
     display: flex;
@@ -5,170 +6,204 @@
     justify-content: space-between;
     gap: 24px;
     margin-top: -97px;
-
+  
     > .information {
-        min-width: 608px;
-        border-radius: 32px;
-        padding: 48px 25px 32px;
-        border: 1px solid #DEE2E6;
-        background-color: #fff;
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-        box-shadow: 0px 20px 24px -4px rgba(118, 118, 118, 0.08), 0px 8px 8px -4px rgba(35, 35, 35, 0.03);
-        margin-top: 29px;
-        
-
-        > h1 {
-            font-family: 'Clash Display';
-            text-align: center;
-            font-size: 34px;
-            font-weight: 600;
-            line-height: 44px;
-            color: #000;
-        }
-        
-        > .media_container {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 24px;
-
-            > .media {
-                width: 30%;
-                max-width: 170px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: 60px;
-                background-color: #F7F7F7;
-
-                > img {
-                    width: 28px;
-                    height: 28px;
-                }
-            }
-        }
-
-        > .grey_line {
-            width: 100%;
-            height: 1px;
-            background-color: #DEE2E6;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            > span {
-                width: 52px;
-                height: 24px;
-                background-color: #fff;
-                text-align: center;
-                font-family: 'Poppins';
-                font-size: 16px;
-                font-weight: 500;
-                color: #74797F;
-            }
-        }
-        
-        > .input_container {
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-
-            > .password_input {
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-
-                > p {
-                    text-align: end;
-                    font-family: 'Poppins';
-                    font-size: 12px;
-                    font-weight: 200;
-                    color: #74797F
-                }
-            }
-        }
-
-        > .open_account_text {
-            margin-top: 20px;
-            text-align: center;
-            font-family: 'Poppins', sans-serif;
-            font-size: 16px;
-            font-weight: 300;
-            letter-spacing: 0.2px;
-            line-height: 20px;
-            color: #313437;
-
-            > span {
-                color: #563AFF;
-                font-weight: 600;
-            }
-        }
-    }
-
-    > .page_gif {
+      width: 90%;
+      border-radius: 32px;
+      padding: 48px 25px 32px;
+      border: 1px solid #DEE2E6;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      box-shadow: 0px 20px 24px -4px rgba(118, 118, 118, 0.08), 0px 8px 8px -4px rgba(35, 35, 35, 0.03);
+      margin-top: 29px;
+  
+      > h1 {
+        font-family: 'Clash Display';
+        text-align: center;
+        font-size: 34px;
+        font-weight: 600;
+        line-height: 44px;
+        color: #000;
+      }
+  
+      > .media_container {
         width: 100%;
-        max-width: 708px;
-        max-height: 677px;
-        overflow: hidden;
-
-        > img {
-            width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 24px;
+  
+        > .media {
+          width: 30%;
+          max-width: 170px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 60px;
+          background-color: #F7F7F7;
+  
+          > img {
+            width: 28px;
+            height: 28px;
+          }
         }
-    }
-
-    > .blur_div {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #313437;
-        opacity: 0.4;
-    }
-
-    > .popup {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+      }
+  
+      > .grey_line {
+        width: 100%;
+        height: 1px;
+        background-color: #DEE2E6;
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-}
-
-@media (max-width: 1340px) {
-    .container {
-        flex-direction: column-reverse;
-    }
-}
-
-@media (max-width: 650px) {
-    .page_gif {
-        display: none;
-    }
-
-    #information {
-        width: 100%;
-        min-width: unset;
-        border-radius: 0;
-        border: 1px solid #fff;
-        box-shadow: none;
-    }
-
-    #open_account_text {
-        position: absolute;
+  
+        > span {
+          width: 52px;
+          height: 24px;
+          background-color: #fff;
+          text-align: center;
+          font-family: 'Poppins';
+          font-size: 16px;
+          font-weight: 500;
+          color: #74797F;
+        }
+      }
+  
+      > .input_container {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+  
+        > .password_input {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+  
+          > p {
+            text-align: end;
+            font-family: 'Poppins';
+            font-size: 12px;
+            font-weight: 200;
+            color: #74797F
+          }
+        }
+      }
+  
+      > .open_account_text {
+        margin-top: 20px;
         text-align: center;
+        font-family: 'Poppins', sans-serif;
+        font-size: 16px;
+        font-weight: 300;
+        letter-spacing: 0.2px;
+        line-height: 20px;
+        color: #313437;
+  
+        > span {
+          color: #563AFF;
+          font-weight: 600;
+        }
+      }
+    }
+  
+    > .page_gif {
+      width: 100%;
+      max-width: 708px;
+      max-height: 677px;
+      overflow: hidden;
+  
+      > img {
         width: 100%;
-        left: 0;
-        bottom: 54px;
+      }
+    }
+  
+    > .blur_div {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #313437;
+      opacity: 0.4;
+    }
+  
+    > .popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  
+  @media (max-width: 1340px) {
+    .container {
+      flex-direction: column;
+      width: 100%;
     }
 
-    #head_text {
-        font-size: 28px;
+    .information{
+        width: 50%;
     }
-}
+
+    
+  }
+  
+  @media (max-width: 650px) {
+    .container{
+        margin: 0px 0;
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
+    }
+    .page_gif {
+      display: none;
+    }
+  
+    .information {
+      width: 90%;
+      border-radius: 20px;
+      border-radius: 0;
+      border: 1px solid #fff;
+      box-shadow: none;
+      height: 580px;
+      position: relative;
+    }
+
+    .information h1{
+        margin-top: -25px;
+    }
+  
+    .open_account_text {
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      left: 0;
+      bottom:15px;
+    }
+  
+    h1 {
+      font-size: 28px;
+    }
+
+    @media screen and (max-width:395px){
+        .information{
+            height: 590px;
+            padding: 0 8px;
+        }
+    }
+
+    @media screen and (max-width:322px){
+        .information{
+            height: 640px;
+            padding: 0 8px;
+        }
+    }
+  }
+  
